syntax = "proto3";

package com.test.charles.shared.models;

option java_package = "com.test.charles.shared.models";
option java_outer_classname = "UserTypeProto";
option java_multiple_files = true;
option go_package = "charles/career-break-learn/user-service-golang/proto;proto";

enum ReferringType {
  USER = 0;
  POST = 1;
}
