syntax = "proto3";

package com.test.charles.shared.models;

option java_package = "com.test.charles.shared.models";
option java_outer_classname = "UserProto";
option go_package = "charles/career-break-learn/user-service-golang/proto;proto";

message User {
  string id = 1;
  string name = 2;
  string last_seen = 3 [json_name = "lastSeen"];
}
