syntax = "proto3";

package com.test.charles.shared.models;

option java_package = "com.test.charles.shared.models";
option java_outer_classname = "UserActivityParticipantProto";
option java_multiple_files = true;
option go_package = "charles/career-break-learn/user-service-golang/proto;proto";

import "referring_type.proto";

message UserActivityReferring {
  ReferringType type = 1;
  string id = 2;
  string user_id = 3 [json_name = "userId"];
}
